[gd_scene load_steps=11 format=3 uid="uid://b3dq0c83hkw8j"]

[ext_resource type="Script" uid="uid://bhapiw3ke4o0o" path="res://src/ui_components/results/win_panel/win_panel.gd" id="1_0iaqg"]
[ext_resource type="FontFile" uid="uid://c7tmixruws4h5" path="res://assets/fonr.ttf" id="1_v0bjp"]
[ext_resource type="Texture2D" uid="uid://d20tmb8a15767" path="res://assets/ui/atttempts/hp.png" id="2_0iaqg"]
[ext_resource type="Script" uid="uid://1agcxa80uqew" path="res://src/util/shaker.gd" id="3_5jawd"]
[ext_resource type="Texture2D" uid="uid://ddceljcpm4y81" path="res://assets/ui/buttons/active_btn.png" id="3_di4t0"]
[ext_resource type="Texture2D" uid="uid://bjmy5f4rxl8fv" path="res://assets/ui/buttons/button_default.png" id="4_v7hqq"]
[ext_resource type="Texture2D" uid="uid://b7k6sktmveh83" path="res://assets/ui/buttons/hover_btn.png" id="5_onymw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_koqw2"]
texture = ExtResource("3_di4t0")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2hlh7"]
texture = ExtResource("4_v7hqq")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ncv0i"]
texture = ExtResource("5_onymw")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="WinPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 580.0
offset_bottom = 632.0
mouse_filter = 2
script = ExtResource("1_0iaqg")

[node name="SuccessLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_right = 288.0
offset_bottom = 184.0
grow_horizontal = 2
pivot_offset = Vector2(288, 88)
theme_override_colors/font_color = Color(0.11372549, 0.9098039, 0.44313726, 1)
theme_override_colors/font_outline_color = Color(0.057600003, 0.48, 0.22656003, 0.76862746)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 128
text = "SUCCESS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 668.0
offset_right = 480.0
offset_bottom = 764.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxTexture_koqw2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2hlh7")
theme_override_styles/hover = SubResource("StyleBoxTexture_ncv0i")
text = "Next level"

[node name="AttemptsScore" type="Control" parent="."]
anchors_preset = 0
offset_left = 3.0
offset_top = 224.0
offset_right = 576.0
offset_bottom = 288.0

[node name="TextureRect" type="TextureRect" parent="AttemptsScore"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -31.999989
offset_right = 64.0
offset_bottom = 32.000015
grow_vertical = 2
texture = ExtResource("2_0iaqg")

[node name="AttemptsCount" type="Label" parent="AttemptsScore"]
layout_mode = 0
offset_left = 88.0
offset_right = 216.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 40
text = "x 4"
vertical_alignment = 1

[node name="AttemptsTotalScore" type="Label" parent="AttemptsScore"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -32.5
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 56
text = "+200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shaker" type="Node" parent="AttemptsScore" node_paths=PackedStringArray("target")]
script = ExtResource("3_5jawd")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="HintsScore" type="Control" parent="."]
anchors_preset = 0
offset_left = 3.0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 384.0

[node name="HintState" type="Label" parent="HintsScore"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 128.0
offset_bottom = 32.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 40
text = "Hint used"
vertical_alignment = 1

[node name="HintTotalScore" type="Label" parent="HintsScore"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -32.5
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 56
text = "+0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shaker" type="Node" parent="HintsScore" node_paths=PackedStringArray("target")]
script = ExtResource("3_5jawd")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="HintsMult" type="Control" parent="."]
anchors_preset = 0
offset_top = 408.0
offset_right = 579.0
offset_bottom = 472.0

[node name="Label" type="Label" parent="HintsMult"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 128.0
offset_bottom = 32.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 40
text = "No hints mult"
vertical_alignment = 1

[node name="HintsMultTotal" type="Label" parent="HintsMult"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -32.0
offset_right = -111.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 56
text = "x1.2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HintsMultIncrement" type="Label" parent="HintsMult"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -32.5
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 36
text = "(+0.1)"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Shaker" type="Node" parent="HintsMult" node_paths=PackedStringArray("target")]
script = ExtResource("3_5jawd")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="TotalScore" type="Control" parent="."]
anchors_preset = 0
offset_top = 534.0
offset_right = 576.0
offset_bottom = 598.0

[node name="Label" type="Label" parent="TotalScore"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -44.5
offset_right = 221.0
offset_bottom = 44.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 78
text = "Total"
vertical_alignment = 1

[node name="TotalScoreLabel" type="Label" parent="TotalScore"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -44.5
offset_bottom = 44.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.11372549, 0.9098039, 0.44313726, 1)
theme_override_fonts/font = ExtResource("1_v0bjp")
theme_override_font_sizes/font_size = 78
text = "+1200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shaker" type="Node" parent="TotalScore" node_paths=PackedStringArray("target")]
script = ExtResource("3_5jawd")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[connection signal="mouse_entered" from="NextLevelButton" to="." method="_on_next_level_button_mouse_entered"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
